<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/whitesmoke">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:background="@color/whitesmoke">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="35sp"
            android:paddingTop="40sp"
            android:layout_marginBottom="10sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_gravity="fill_horizontal"
        android:layout_height="0dp"
        android:layout_weight="0.80">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_height="0dp"
            android:layout_weight="0.40">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/radioGroup1"
                    >
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Suma"
                        android:id="@+id/btnSuma" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Resta"
                        android:id="@string/Resta"
                        android:layout_gravity="center_horizontal" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Multi"
                        android:id="@+id/btnMulti" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Div"
                        android:id="@+id/btnDiv"
                        android:layout_gravity="center_horizontal" />                    </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whitesmoke"
                    android:hint="@string/txtNum1"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:ems="80"
                    android:layout_marginBottom="35sp"
                    android:layout_marginTop="18sp"
                    android:id="@+id/txtNum1" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/whitesmoke"
                    android:hint="@string/txtNum2"
                    android:textSize="25sp"
                    android:inputType="number"
                    android:ems="80"
                    android:id="@+id/txtNum2" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_height="0dp"
            android:layout_weight="0.20">

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnResultado"
                android:hint="@string/btnResultado"
                android:id="@+id/btnResultado"
                android:onClick="Resultado"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.70" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_height="0dp"
            android:layout_weight="0.20">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp"
                android:id="@+id/txtRes"
                android:textSize="35sp"
                android:textAlignment="center"
                android:textColor="@color/blueviolet"
                android:textStyle="bold"
                android:hint="@string/txtRes"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

